! Fix alignment (and validation!) of the permissions page. Suddenly I thought I was back on Simple Permissions before realising I wasn't...

--- a/Themes/default/css/admin.css
+++ b/Themes/default/css/admin.css
@@ -989,8 +989,9 @@ ul.pending_payments li {
 .perm_groups {
 	background-color: #fff;
 }
-.perm_classic {
+table.table_grid.perm_grid {
 	margin: 0.2em;
+	width: 49%;
 }
 .permission_groups {
 	padding: 0;
